--- a/src/UI/Pagination/Pagination.module.css
+++ b/src/UI/Pagination/Pagination.module.css
@@ -5,6 +5,7 @@
     list-style: none;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
 }
 .pageItem{
     border: solid 1px #17696A;
@@ -12,8 +13,6 @@
     border-radius: 4px;
     padding: 5px 10px;
 }
-.class:active,
-.class:focus,
 .pageItem:hover{
     color: white;
     background: #17696A;
