--- a/src/components/ProductsPage/ProductsPage.module.css
+++ b/src/components/ProductsPage/ProductsPage.module.css
@@ -1,11 +1,11 @@
-.card{
+.menu{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    margin-left: 24px;
+    margin-bottom: 30px;
+    margin-top: 10px;
 }
-.button {
+.item{
     display: flex;
-    align-items: center;
-    justify-content: space-around;
 }
