--- a/src/components/CartComponent/CartComponent.module.css
+++ b/src/components/CartComponent/CartComponent.module.css
@@ -1,42 +1,28 @@
-.cart {
-    border: 1px solid #ccc;
-    padding: 1rem;
-}
-
-.cartTitle {
-    text-align: center;
-}
-
-.cartItems {
+.modal{
+    position: absolute;
+    right: 0px;
+    top: 130px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    z-index: 2;
+    width: auto;
+    height: auto;
+    padding: 80px;
+    border-radius: 5px;
+    box-shadow: -12px 10px 23px -11px rgba(0,0,0,0.46);
+    background-color: white;
+    gap: 10px;
 }
-
-.cartItem {
-    width: calc(25% - 1rem);
-    margin: 0.5rem;
-    border: 1px solid #ccc;
-    padding: 1rem;
+.container{
     display: flex;
+    gap: 20px;
 }
-
-.cartItemImage {
-    width: 150px;
+.right {
+    display: flex;
+    flex-direction: column;
 }
-
-.cartItemInfo {
-    flex: 1;
-    padding-left: 1rem;
-}
-
-.cartItemRemove {
-    background-color: red;
-    color: white;
-    border: none;
-    padding: 0.5rem;
-    cursor: pointer;
-}
-
-.emptyCart {
-    text-align: center;
+.image{
+    width: 100px;
+    height: auto;
+    object-fit: cover;
 }
